[tool.poetry]
name = "dangobot"
version = "0.1.0"
description = "A bot to give a specific emoji every specified amount of messages."
authors = ["arielbeje <arielbeje@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
discord = "^1.0"
aiosqlite = "^0.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
rope = "^0.14.0"
yapf = "^0.27.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
